refactor gradle to common.