@@ -1,5 +1,7 @@
 apply plugin: "yakworks.grails-plugin"
 
+apply from: "${rootProject.projectDir}/gradle/test-integration.gradle"
+
 //shared resources to pick up the Gorm defaults from application.groovy, as well as simple logback
 sourceSets.test.resources.srcDirs += [project(':gorm-test-support').sourceSets.main.resources]
 
@@ -41,7 +43,10 @@ bootRun {
     '-Dspring.output.ansi.enabled=always',
     '-noverify',
     '-XX:TieredStopAtLevel=1',
-    '-Xmx1024m')
+    '-Xmx1024m',
+    '--illegal-access=permit', '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+  )
+
   sourceResources sourceSets.main
   String springProfilesActive = 'spring.profiles.active'
   systemProperty springProfilesActive, System.getProperty(springProfilesActive)
@@ -68,17 +73,7 @@ jar {
 //   }
 // }
 
-integrationTest {
-  testlogger {
-    showPassed false
-    showExceptions true
-    showStandardStreams = true //shows the printlns in console
-    showPassed false
-    showSkipped true
-    showFailed true
-    showSummary true
-  }
-}
+
 
 tasks.register("verifyNoSnapshots") {
   group = "verification"
